ingress/envoy-gateway/gen-output/envoy-gateway.envoy-gateway-system.service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: envoy-gateway
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: gateway-helm
    app.kubernetes.io/version: v1.7.1
    control-plane: envoy-gateway
    helm.sh/chart: gateway-helm-1.7.1
  name: envoy-gateway
  namespace: envoy-gateway-system
spec:
  ports:
  - name: metrics
    port: 19001
    targetPort: 19001
  - name: webhook
    port: 9443
    targetPort: 9443
  selector:
    app.kubernetes.io/instance: envoy-gateway
    app.kubernetes.io/name: gateway-helm
    control-plane: envoy-gateway
  type: ClusterIP
